2011-04-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix timestamp-related failures
	Fixes automake bug#8365.
	* tests/aclocal6.test: Sleep before modifying m4 files that should
	trigger remake rules.  Remove incorrect/obsoleted comments.
	* tests/subdir5.test: Likewise, and extend a bit.
	* tests/subdir8.test: Likewise.
	* tests/pr8365-remake-timing.test: New xfailing test.
	* tests/Makefile.am (TESTS): Update.
	Report from Sam Steingold.

2011-04-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Create subdirs for generated sources even when not dep tracking.
	* automake.in (handle_single_transform): If $object is derived
	and lands in subdir, be sure to output a dirstamp dependency.
	* tests/yacc5.test: Avoid falsely matching the dirstamp
	dependency when grepping for a rule.
	* tests/lex-subobj-nodep.test: New test.
	* tests/Makefile.am (TESTS): Update.
	* THANKS: Update.
	Report by Ignacy Gawedzki.

	Fix locale issue in check-exported-srcdir.test.
	* tests/check-exported-srcdir.test: Reformulate glob to not fail
	in a locale that ignores or interleaves character case.

2011-04-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: better visibility for aclocal in the index
	* doc/automake.texi (@menu): Rename title for entry 'configure'
	from "Scanning configure.ac or configure.in" to the more precise
	"Scanning configure.ac, using aclocal".
	(@detailmenu): Adjust.
	(@node configure): Adjust, and extend @cindex calls accordingly.
	* THANKS: Update.
	From a report by Maynard Johnson.

2011-03-30  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: improve tests on "maintainer-clean" target
	* tests/aclocal6.test: Move checks related to "maintainer-clean"
	functionalities into ...
	* tests/maintclean-vpath.test: ... this new test.
	* tests/maintclean.test: Update heading comments.  Extend to also
	test subdirs.  Remove useless disabling of YACC.  Fix m4 quoting
	in configure.in.  Add a trailing `:' command.  Remove extra blank
	lines.