@@ -1,3 +1,13 @@
+2011-04-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix makedepend depmode for VPATH builds.
+	* lib/depcomp [makedepend]: Remove any VPATH prefix from the
+	object file name, so a rebuild doesn't attempt to update the
+	.Po files in the source tree.
+	* tests/depcomp9.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+	* NEWS: Update.
+
 2011-04-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix timestamp-related failures
